# str0m_browser_integration_tests

./: .gitignore  Cargo.toml  README.md  package.json  run-all-tests.bat  run-all-tests.sh
.github/workflows/: browser-tests.yml
scripts/: analyze_pcaps.py
src/: client.rs  lib.rs  net.rs  pcap.rs  peer.rs  protocol.rs  server.rs
tests/: integration.rs
web/: karma.conf.js  karma.warp.conf.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/plugins/: karma-edge-launcher.js  karma-str0m-server.js
web/src/: protocol.ts  signaling.ts  webrtc-client.spec.ts  webrtc-warp.spec.ts
