[package]
name = "str0m-browser-integration-tests"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["str0m/aws-lc-rs"]
rust-crypto = ["str0m/rust-crypto"]
openssl = ["str0m/openssl"]
apple-crypto = ["str0m/apple-crypto"]
wincrypto = ["str0m/wincrypto"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
if-addrs = "0.14"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str0m = { git = "https://github.com/algesten/str0m", default-features = false, branch = "test/dtls13" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.rust]
redundant_imports = "deny"
redundant_lifetimes = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"

[lints.clippy]
branches_sharing_code = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
fallible_impl_from = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_stack_frames = "deny"
missing_const_for_fn = "deny"
mutex_integer = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_pub_crate = "deny"
semicolon_if_nothing_returned = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
suboptimal_flops = "deny"
suspicious_operation_groupings = "deny"
trailing_empty_array = "deny"
uninlined_format_args = "deny"
use_self = "deny"

[profile.dev]
panic = 'abort'

[profile.release]
codegen-units = 1
overflow-checks = true
panic = 'abort'

[profile.release-lto]
inherits = 'release'
lto = 'fat'

[profile.bench]
debug = 1
